argocd/dollardollar/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dollardollar
  name: dollardollar
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: dollardollar
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: dollardollar
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: dollardollar-secrets
          image: harung43/dollardollar:latest@sha256:64b541741586d8c1825cc89b9c4dd767b9df149b5eeae49d46fd9970893464c3
          imagePullPolicy: IfNotPresent
          name: dollardollar
          ports:
            - containerPort: 5001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 5001
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
