argocd/dollardollar/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dollardollar
  name: dollardollar
spec:
  ports:
    - name: "http"
      port: 5001
      targetPort: 5001
  selector:
    app: dollardollar
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  # type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
